--- a/src/style.css
+++ b/src/style.css
@@ -38,20 +38,24 @@ body {
 }
 
 .currency-board::-webkit-scrollbar {
-  width: 10px;
-  height: 10px;
+  width: 4px;
+  height: 4px;
   background-color: transparent;
 }
+
 .currency-board::-webkit-scrollbar-track {
   background: transparent;
 }
+
 .currency-board::-webkit-scrollbar-track-piece {
   background: transparent;
 }
+
 .currency-board::-webkit-scrollbar-thumb {
   background: var(--green);
   border-radius: 5px;
 }
+
 .currency-board::-webkit-scrollbar-corner {
   background: var(--black);
   border-radius: 5px;
@@ -109,7 +113,7 @@ input-area > div {
 }
 
 ::placeholder {
-  color: #D9D9D9;
+  color: rgb(145, 145, 145);
   font-family: 'Fira Code', sans-serif;
   font-size: 1.4rem;
 }
@@ -178,6 +182,11 @@ input-area > div {
 .nav-footer img {
   width: 1rem;
   height: 1rem;
+}
+
+.swal2-styled.swal2-confirm {
+  background-color: var(--green);
+  color: #373737;
 }
 
 @media (max-width: 600px) {
